@@ -1,0 +1,1 @@
+obj-*/*.1
