@@ -9,6 +9,9 @@ libcorkipset (1.1.1+20150311-2) UNRELEASED; urgency=medium
     - Add 0009: Support CMake Threads.
   * debian/libcorkipset-doc.docs:
     - Add example code as docs
+  * debian/control, debian/rules & debian/libcorkipset-utils.install:
+    - Add new "-utils" package, to include binary tools.
+      manpages are created by help2man tool in debian/rules.
 
  -- Roger Shimizu <rogershimizu@gmail.com>  Wed, 20 Jul 2016 00:10:13 +0900
 
